Update type product
